--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,8 @@ select {
 }
 
 h1 {
+    text-decoration-line: underline;
+    text-decoration-style: wavy;
     column-span: all;
     text-align: center;
     color: rgb(9, 17, 9);
